@@ -1,3 +1,9 @@
+*gebuilder-0.1 (23 Dec 2019)
+
+  23 Dec 2019;  <chymera@gentoo.org> +gebuilder-0.1.ebuild,
+  -gebuilder-9999.ebuild:
+  app-misc/gebuilder: new versioned ebuild
+
   26 Oct 2019;  <chymera@gentoo.org> gebuilder-9999.ebuild:
   app-misc/gebuilder: improved USE flag specification
 
